--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+
+
+/*xs, sm, lg оставляем сетки, убираем MD (992 по умолчанию)
+убрать все стили мд*/
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -443,6 +450,7 @@ address {
 .row {
   margin-left: -15px;
   margin-right: -15px;
+  position: relative;
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
@@ -1281,3 +1289,54 @@ address {
   }
 }
 
+
+
+
+
+
+
+
+/*----------------------------------------------------------------------------*\
+  Стили
+\*----------------------------------------------------------------------------*/
+
+.nav-wrapper {
+  background-color: #ff0;
+}
+
+@media (min-width: 1200px) {
+  .nav-wrapper {
+    background-color: #ff0;
+    position: absolute;
+    top:0;
+    left: 16.6666667%;
+    width: 815px;
+  }
+}
+
+.page-header-top {
+  min-height:100px;
+}
+
+
+.row{
+font-size: 0;
+}
+
+.nav {
+
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+/*
+.row > [class*="col-"] {
+  float:none !important;
+  display: inline-block;
+  vertical-align: top;
+  font-size: 16px;
+}*/
