--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 
 
 /*xs, sm, lg оставляем сетки, убираем MD (992 по умолчанию)
@@ -83,10 +81,7 @@ strong {
 dfn {
   font-style: italic;
 }
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
+
 mark {
   background: #ff0;
   color: #000;
@@ -240,7 +235,7 @@ th {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-html {
+/*html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -250,7 +245,7 @@ body {
   line-height: 1.42857143;
   color: #333333;
   background-color: #ffffff;
-}
+}*/
 input,
 button,
 select,
@@ -299,66 +294,6 @@ hr {
   Типографика
 \*----------------------------------------------------------------------------*/
 
-
-
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
- {
-  font-family: inherit;
-  font-weight: 500;
-  line-height: 1.1;
-  color: inherit;
-}
-
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3 {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-h4,
-h5,
-h6,
- {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-h1,
-.h1 {
-  font-size: 36px;
-}
-h2,
-.h2 {
-  font-size: 30px;
-}
-h3,
-.h3 {
-  font-size: 24px;
-}
-h4,
-.h4 {
-  font-size: 18px;
-}
-h5,
-.h5 {
-  font-size: 14px;
-}
-h6,
-.h6 {
-  font-size: 12px;
-}
-p {
-  margin: 0 0 10px;
-}
 
 @media (min-width: 768px) {
   .lead {
@@ -1160,31 +1095,51 @@ address {
 
 /*header*/
 
-.contacts.item {
-  font-family: url (../);
-}
 
 .header_home {
     background: url(../img/bgr-header-xs.jpg) top no-repeat;
+    width: 100%;
     padding: 10px 0 10px;
     position: relative;
+    background-size:cover;
 }
-
-/*.nav-wrapper {
-  background-color: #ff0;
-}*/
 
 .page-header-top {
   background: #f4f4f4;
 }
-img{
-  max-width:100%;
+
+
+.contacts {
+
 }
+
+.contacts a.item{
+  color: #fff;
+  background-color: #47a4f9;
+  display: block;
+  font-family: "LatoRegular";
+  font-size: 18px;
+  text-decoration: none;
+  padding: 10px 0;
+  margin-bottom: 4px;
+  text-align: center;
+}
+
+.contacts a.item:last-child {
+  margin-bottom: 8px;
+}
+
+nav.col-xs-12 {
+  padding-right:0;
+  padding-left:0;
+}
+
+
 
 /*gamburger*/
 
 .page-header {
-  background-color: #777;
+  background-color: #fff;
   position: relative;
   height: 3em;
 }
@@ -1192,10 +1147,10 @@ img{
   position: absolute;
   z-index: 1;
   top: 0;
-  right: 0;
+  right: 10px;
   display: flex;
   align-items: center;
-  width: 3em;
+  width: 2.1em;
   height: 3em;
   line-height: 3em;
   user-select: none;
@@ -1204,18 +1159,18 @@ img{
   display: inline-block;
   vertical-align: bottom;
   width: 100%;
-  height: .3rem;
-  background: #fff;
-  border-radius: .2rem;
+  height: .4rem;
+  background: #13152e;
+  border-radius: .5rem;
   position: relative;
   transition: background .3s .5s;
 }
 .toggler > span:before,
 .toggler > span:after {
   width: 100%;
-  height: .3rem;
-  background: #fff;
-  border-radius: .2rem;
+  height: .4rem;
+  background: #13152e;
+  border-radius: .5rem;
   position: absolute;
   left: 0;
   content: '';
@@ -1223,10 +1178,10 @@ img{
   transition: top .3s .6s, transform .3s;
 }
 .toggler > span:before {
-  top: 1rem;
+  top: 0.7rem;
 }
 .toggler > span:after {
-  top: -1rem;
+  top: -0.7rem;
 }
 .toggler--close > span {
   transition: background .3s 0;
@@ -1278,6 +1233,48 @@ img{
 /*/gamburger*/
 
 
+.lead h1.h1_lead{
+  font-family: "LatoBold";
+  color: #fff;
+  font-size: 24px;
+  margin: 50px 0 15px;
+  padding: 7px 7px;
+  background-color: #13152e;
+}
+
+
+.lead h2.h2_lead {
+  font-family: "RobotoSlab";
+  font-weight: 400;
+  color: #fff;
+  font-size: 24px;
+  margin: 15px 0 80px;
+  padding: 7px 7px;
+  background-color: #13152e;
+}
+
+
+.about {
+  margin: 50px 0 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .subnav {
   background: #13152e;
 }
@@ -1308,6 +1305,27 @@ section.description img {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: 768px) {
 }
 
@@ -1331,17 +1349,3 @@ section.description img {
   }
 }
 
-.page-header-top {
-  min-height:100px;
-}
-
-
-.nav {
-
-}
-
-/*.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-*/
