--- a/css/style.css
+++ b/css/style.css
@@ -1145,7 +1145,7 @@ nav.col-xs-12 {
 }
 .toggler {
   position: absolute;
-  z-index: 1;
+  z-index: 4;
   top: 0;
   right: 10px;
   display: flex;
@@ -1210,9 +1210,13 @@ nav.col-xs-12 {
 }
 .nav-wrapper-visible {
   display: block;
+  background: #fff;
+  z-index: 1;
+  padding-top: 3em;
 }
 .nav-item {
   display: block;
+  background: transparent;
 }
 .nav-item:first-child a {
   padding-right: 3em;
@@ -1222,8 +1226,7 @@ nav.col-xs-12 {
   padding: 0 1em;
   height: 3em;
   line-height: 3;
-  background-color: #777;
-  color: #fff;
+  color: #444;
   font-weight: 700;
   text-decoration: none;
   margin-bottom: 1px;
