--- a/css/style.css
+++ b/css/style.css
@@ -1423,6 +1423,31 @@ footer .adress {
 }
 
 
+
+.send-us_text {
+  font-size: 18px;
+  line-height: 24px;
+  color: #fff;
+}
+
+
+
+button.send-us_button {
+  color: #fff;
+  background-color: #3b9efa;
+  display: inline-block;
+  padding: 15px 60px;
+  margin: 60px 0;
+
+}
+
+
+
+
+
+
+
+
 .subnav {
   background: #13152e;
 }
