--- a/css/style.css
+++ b/css/style.css
@@ -1253,12 +1253,19 @@ nav.col-xs-12 {
   font-weight: 400;
   color: #fff;
   display: inline;
-  line-height: 30px;
+  line-height: 24px;
   font-size: 18px;
-  padding: 4px 7px;
-  background-color: #13152e;
+/*  padding: 4px 7px;
+  background-color: #13152e;*/
 }
-
+.lead span {
+  background-color: #13152e;
+  color: #fff;
+  line-height: 1.3em;
+  padding-left: .5em;
+  padding-right: .5em;
+  display: inline-block;
+}
 
 
 h4.block-title {
@@ -1288,6 +1295,15 @@ h4.block-title {
 .pictures-about {
   padding: 40px 0 24px;
 }
+.pictures-about > div{
+  background:url("http://placehold.it/500x500?text=pic") center center no-repeat;
+  background-size:cover;
+  height: 145px;
+  text-align: center;
+  padding:0;
+
+}
+
 
 
 .course-description_title{
@@ -1298,18 +1314,12 @@ h4.block-title {
   background: #27a8bc;
 }
 
-.description_content {
-  z-index: 10;
-  position: absolute;
-  padding-bottom: 24px;
-}
+
 
 section.description img {
   position: relative;
   z-index: 5;
-  top: 0;
-  left: 0;
-  min-width: 100%;
+  max-width: 100%;
 }
 
 
@@ -1317,24 +1327,66 @@ section.description img {
   text-align: center;
 }
 
-.name_description {
+
+.description_item {
+  margin-bottom: 30px;
+  position: relative;
+}
+
+
+h3.name_description {
   font-family: "RobotoSlab";
   font-weight: 300;
   color: #fff;
   font-size: 24px;
-  margin: 30px 0 150px 0;
-  padding: 4px 7px;
+  margin: 30px 0 0 0;
+  padding: 5px 10px;
   background-color: #13152e;
+  position: absolute;
+  z-index: 6;
 }
+
+.description_item h3 span {
+  background-color: #13152e;
+  color: #fff;
+  line-height: 1.3em;
+  width: 150px;
+/*  padding-left: .5em;
+  padding-right: .5em;*/
+  display: inline-block;
+  box-sizing:border-box;
+}
+
 
 .desc_description {
   font-family: "LatoRegular";
   color: #fff;
   font-size: 18px;
-  line-height: 28px;
-  padding: 4px 7px;
-  background-color: #13152e;
+  float:left;
+/*  line-height: 28px;*/
+  position: absolute;
+  right: calc(15px + 20px);
+  bottom: 25px;
+  z-index: 6;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
+
+.desc_description p{
+  display:inline;
+  text-align:left;
+}
+
+.desc_description span {
+  background-color: #13152e;
+  color: #fff;
+  line-height: 1.3em;
+  padding: 4px 7px;
+  display:inline-block;
+  vertical-align: top;
+}
+
 
 
 h4.block-title.center {
@@ -1500,12 +1552,6 @@ button.send-us_button {
 }
 
 
-
-
-#map {
-  width: 100%;
-  height: 400px;
-}
 
 
 
